# FastTranslucentShader

./: .gitignore  CMakeLists.txt  README.md
sources/: CMakeLists.txt  arcballcontroller.cpp  arcballcontroller.h  main.cpp  maingui.cpp  maingui.h  openglviewer.cpp  openglviewer.h  settings.h.in  tiny_obj_loader.h
sources/shaders/: dipole.fs  dipole.gs  dipole.vs  gbuffers.fs  gbuffers.vs  render.fs  render.vs
